Ensure text remains visible during webfont load

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,5 +1,12 @@
 /* Layout */
 
+/* Font */
+
+@font-face {
+  font-family: 'FontAwesome';
+  font-display: swap;
+}
+
 /* Article */
 
 .article-card-container {
